src/test/ui/existential_types/generic_underconstrained.stderr
error: at least one trait must be specified
  --> $DIR/generic_underconstrained.rs:6:46
   |
LL | existential type Underconstrained<T: Trait>: 'static;
   |                                              ^^^^^^^

error[E0277]: the trait bound `T: Trait` is not satisfied
  --> $DIR/generic_underconstrained.rs:6:1
   |
LL | existential type Underconstrained<T: Trait>: 'static;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Trait` is not implemented for `T`
   |
   = help: consider adding a `where T: Trait` bound
   = note: the return type of a function must have a statically known size

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
